dodanie ksiezyca, zmiana tla, kombiowanie z wielkoscia planet i orbit

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <img src="venus.png" alt="venus">
     </div>
     <div class="orbit o_earth">
-        <img src="earth.png" alt="earth">
+        <div class="earth"><img class="earthimg" src="earth.png" alt="earth"><img class="moon" src="moon.png" alt="moon"></div>
     </div>
     <div class="orbit o_mars">
         <img src="mars.png" alt="mars">
