pododawanie divow i podpisow dla kazdej planety

--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
 <div class="solar_system">
     <div class="sun"><img src="Sun1.png" alt="sun"></div>
     <div class="orbit o_mercury">
-        <img src="mercury.png" alt="mercury">
+        <div class="mercury inner"><img src="mercury.png" alt="mercury"><p>Mercury</p></div>
     </div>
     <div class="orbit o_venus">
-         <img src="venus.png" alt="venus">
+         <div class="venus inner"><img src="venus.png" alt="venus"><p>Venus</p></div>
     </div>
     <div class="orbit o_earth">
-        <div class="earth"><img class="earthimg" src="earth.png" alt="earth"><img class="moon" src="moon.png" alt="moon"></div>
+        <div class="earth inner"><img class="earthimg" src="earth.png" alt="earth"><img class="moon" src="moon.png" alt="moon"><p>Earth</p></div>
     </div>
     <div class="orbit o_mars">
-        <img src="mars.png" alt="mars">
+        <div class="mars inner"><img src="mars.png" alt="mars"><p>Mars</p></div>
     </div>
     <div class="orbit o_jupiter">
-        <img src="jupiter.png" alt="jupiter">
+        <div class="jupiter outer"><img src="jupiter.png" alt="jupiter"><p>Jupiter</p></div>
     </div>
     <div class="orbit o_saturn">
-        <img src="saturn.png" alt="saturn">
+        <div class="saturn outer"><img src="saturn.png" alt="saturn"><p>Saturn</p></div>
     </div>
     <div class="orbit o_uranus">
-        <img src="uranus.png" alt="uranus">
+        <div class="uranus outer"><img src="uranus.png" alt="uranus"><p>Uranus</p></div>
     </div>
     <div class="orbit o_neptune">
-        <img src="neptune.png" alt="neptune">
+        <div class="neptune outer"><img src="neptune.png" alt="neptune"><p>Neptune</p></div>
     </div>
 </div>
 </body>
