--- a/index.html
+++ b/index.html
@@ -9,33 +9,34 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+<link rel="icon" type="image/x-icon" href="images/icons8-space-641.png">
 </head>
 <body>
 <div class="solar_system">
-    <div class="sun"><img src="Sun1.png" alt="sun"></div>
+    <div class="sun"><img src="images/Sun1.png" alt="sun"></div>
     <div class="orbit o_mercury">
-        <img src="mercury.png" alt="mercury">
+        <div class="mercury inner"><img src="images/mercury.png" alt="mercury"><p>Mercury</p></div>
     </div>
     <div class="orbit o_venus">
-         <img src="venus.png" alt="venus">
+         <div class="venus inner"><img src="images/venus.png" alt="venus"><p>Venus</p></div>
     </div>
     <div class="orbit o_earth">
-        <img src="earth.png" alt="earth">
+        <div class="earth inner"><img class="earthimg" src="images/earth.png" alt="earth"><img class="moon" src="images/moon.png" alt="moon"><p>Earth</p></div>
     </div>
     <div class="orbit o_mars">
-        <img src="mars.png" alt="mars">
+        <div class="mars inner"><img src="images/mars.png" alt="mars"><p>Mars</p></div>
     </div>
     <div class="orbit o_jupiter">
-        <img src="jupiter.png" alt="jupiter">
+        <div class="jupiter outer"><img src="images/jupiter.png" alt="jupiter"><p>Jupiter</p></div>
     </div>
     <div class="orbit o_saturn">
-        <img src="saturn.png" alt="saturn">
+        <div class="saturn outer"><img src="images/saturn.png" alt="saturn"><p>Saturn</p></div>
     </div>
     <div class="orbit o_uranus">
-        <img src="uranus.png" alt="uranus">
+        <div class="uranus outer"><img src="images/uranus.png" alt="uranus"><p>Uranus</p></div>
     </div>
     <div class="orbit o_neptune">
-        <img src="neptune.png" alt="neptune">
+        <div class="neptune outer"><img src="images/neptune.png" alt="neptune"><p>Neptune</p></div>
     </div>
 </div>
 </body>
